--- a/styles/utils/_animations.scss
+++ b/styles/utils/_animations.scss
@@ -1,3 +1,13 @@
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes fade-right {
   from {
     transform: translateX(-5%);
